--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1,4 +1,5 @@
 @use './_theme.scss';
+@use './_variables.scss' as *;
 
 *,
 *::before,
@@ -33,4 +34,8 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+* {
+  transition: color $transition;
 }
