--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -14,8 +14,8 @@ body {
   color: hsl(var(--text));
   background-color: hsl(var(--base));
   transition:
-    color 0.5s,
-    background-color 0.5s;
+    color $transition,
+    background-color $transition;
   line-height: 1.6;
   font-family:
     Inter,
