a11y: re-add `text-decoration` to anchors

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -37,8 +37,11 @@ hr {
 }
 
 a {
-  color: hsla(var(--blue) / 1);
-  text-decoration: none;
+  color: hsla(var(--sapphire) / 1);
+  text-decoration: underline dashed hsla(var(--blue) / 1);
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 .pane {
