fix: remove `position: sticky;` from .profile when under 600px

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -108,5 +108,8 @@ a {
 @media (max-width: 600px) {
   .pane {
     grid-template-columns: 1fr;
+    .pane-item.profile {
+        position: unset;
+    }
   }
 }
