--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -104,6 +104,18 @@ a {
   }
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
 @media (max-width: 600px) {
   .pane {
     grid-template-columns: 1fr;
